feat: improve background and logo handling

--- a/src/lib/translations/de/common.json
+++ b/src/lib/translations/de/common.json
@@ -1,6 +1,6 @@
 {
-  "nav": {
-    "settings": "Einstellungen",
-    "home": "Dashboard"
-  }
+  "home": "Dashboard",
+  "settings": "Einstellungen",
+  "save": "Speichern",
+  "weather": "Wetter"
 }
