feat: add translations

--- a/src/lib/translations/en/common.json
+++ b/src/lib/translations/en/common.json
@@ -1,6 +1,8 @@
 {
-  "nav": {
-    "settings": "Settings",
-    "home": "Home"
-  }
+  "close": "Close",
+  "dashboard": "Dashboard",
+  "home": "Home",
+  "save": "Speichern",
+  "settings": "Settings",
+  "weather": "Weather"
 }
