--- a/src/lib/translations/de/common.json
+++ b/src/lib/translations/de/common.json
@@ -2,5 +2,6 @@
   "home": "Dashboard",
   "settings": "Einstellungen",
   "save": "Speichern",
+  "dashboard": "Dashboard",
   "weather": "Wetter"
 }
