--- a/src/lib/translations/en/common.json
+++ b/src/lib/translations/en/common.json
@@ -2,7 +2,7 @@
   "close": "Close",
   "dashboard": "Dashboard",
   "home": "Home",
-  "save": "Speichern",
+  "save": "Save",
   "settings": "Settings",
   "weather": "Weather"
 }
