feat: weather charts

--- a/src/lib/translations/de/weather.json
+++ b/src/lib/translations/de/weather.json
@@ -4,6 +4,7 @@
   "humidity": "Luftfeuchte",
   "temperature": "Temperatur",
   "visibility": "Blickweite",
+  "pressure": "Luftdruck",
   "wind": "Wind",
   "metric": "metrisch",
   "imperial": "imperial"
