--- a/src/lib/translations/en/weather.json
+++ b/src/lib/translations/en/weather.json
@@ -4,6 +4,7 @@
   "humidity": "humidity",
   "temperature": "temperature",
   "visibility": "visibility",
+  "pressure": "pressure",
   "wind": "wind",
   "metric": "metric",
   "imperial": "imperial"
