feat: improve translations

--- a/src/lib/translations/de/settings.json
+++ b/src/lib/translations/de/settings.json
@@ -12,6 +12,7 @@
       "": "Keine",
       "bubbles": "Blasen",
       "circles": "Kreise",
+      "drizzle": "Nieseln",
       "leaves": "Herbstblätter",
       "rain": "Regen",
       "snow": "Schnee",
