--- a/src/lib/translations/en/settings.json
+++ b/src/lib/translations/en/settings.json
@@ -14,6 +14,7 @@
       "": "none",
       "bubbles": "bubbles",
       "circles": "circles",
+      "drizzle": "drizzle",
       "leaves": "leaves",
       "rain": "rain",
       "snow": "snow",
