--- a/src/lib/translations/es/common.json
+++ b/src/lib/translations/es/common.json
@@ -1,4 +1,8 @@
 {
-  "settings": "Ajustes",
-  "home": "Panel"
+  "close": "cerrar",
+  "dashboard": "panel",
+  "home": "panel",
+  "save": "guardar",
+  "settings": "ajustes",
+  "weather": "clima"
 }
