--- a/src/lib/translations/en/calendar.json
+++ b/src/lib/translations/en/calendar.json
@@ -2,5 +2,11 @@
   "msg": {
     "missing-calendars": "Some calendars missing",
     "no-events": "No upcoming events"
-  }
+  },
+  "yesterday": "yesterday",
+  "today": "today",
+  "tomorrow": "tomorrow",
+  "from": "from",
+  "to": "to",
+  "relevant-today": "relevant today"
 }
