feat: add split mode ui

--- a/src/lib/translations/de/settings.json
+++ b/src/lib/translations/de/settings.json
@@ -34,6 +34,7 @@
     "position": "Position",
     "position-top": "Kacheln oben",
     "position-bottom": "Kacheln unten",
+    "position-split": "Kacheln separat",
     "features": "Features"
   },
   "admin": {
